fix(ui): line wrap timers where relevant in app menu

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -114,11 +114,6 @@ app-game-icon:not([slot]) {
   margin-inline-end: 16px;
 }
 
-ion-label.has-timer {
-  display: flex;
-  justify-content: space-between;
-}
-
 .settings {
   position: absolute;
   right: 10px;
